--- a/src/scss/header-style.scss
+++ b/src/scss/header-style.scss
@@ -1,3 +1,5 @@
+@import "./variables.scss";
+
 .header {
     width: 100%;
     height: 100vh;
@@ -9,7 +11,8 @@
         display: flex;
         justify-content: center;
         align-items: center;
-        background-color: rgba(0, 0, 0, 0.644);
+        flex-direction: column;
+        background-color: $trans-black;
         color: white;
         font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
         width: 100%;
@@ -26,7 +29,7 @@
             }
 
             .description {
-                color: rgb(223, 223, 223);
+                color: $grayish-white;
                 text-align: justify;
             }
         }
@@ -37,7 +40,12 @@
             left: 30px;
             cursor: pointer;
             user-select: none;
+            transition: all 0.09s ease-out;
             
+            &:active {
+                transform: scale(1.5);
+            }
+
             .material-icons {
                 font-size: 30px !important;
             }
@@ -50,7 +58,7 @@
             min-height: 300px;
             top: -1000px;
             transition: all .3s ease-in-out;
-            background-color: rgba(255, 255, 255, 0.973);
+            background-color: $soft-white;
             color: rgb(44, 44, 44);
             border-radius: 15px;
             
@@ -71,8 +79,57 @@
                     padding: 9px 12px;
 
                     &:hover {
-                        background-color: rgb(24, 108, 233);
+                        background-color: $blue;
                         color: white;
+                    }
+                }
+            }
+
+            .wclose-btn {
+                margin-top: 105px;
+                padding: 10px 0px;
+                display: flex;
+                justify-content: center;
+                align-items: center;
+
+                &:hover  .wbtn{
+                    height: 8px;
+                }
+
+                .wbtn {
+                    cursor: pointer;
+                    width: 40px;
+                    height: 3px;
+                    background-color: $blue;
+                    border-radius: 5px;
+                    transition: all 0.1s ease-out;
+                    animation: _W_Btn_Animation 4s linear infinite;
+                }
+
+                @keyframes _W_Btn_Animation {
+                    0% {
+                        background-color: rgb(223, 23, 123);
+                        box-shadow: 0px 0px 20px 1px rgb(223, 23, 123);
+                    }
+                    20% {
+                        background-color:  rgb(190, 23, 223);
+                        box-shadow: 0px 0px 20px 1px rgb(190, 23, 223);
+                    }
+                    40% {
+                        background-color: rgb(66, 23, 223);
+                        box-shadow: 0px 0px 20px 1px rgb(66, 23, 223);
+                    }
+                    60% {
+                        background-color: rgb(23, 150, 223);
+                        box-shadow: 0px 0px 20px 1px rgb(23, 150, 223);
+                    }
+                    80% {
+                        background-color: rgb(23, 223, 50);
+                        box-shadow: 0px 0px 20px 1px rgb(23, 223, 50);
+                    }
+                    100% {
+                        background-color: rgb(223, 170, 23);
+                        box-shadow: 0px 0px 20px 1px rgb(223, 170, 23);
                     }
                 }
             }
